--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.App {
-  text-align: center;
-  font-family: 'Comfortaa', cursive;
+a {
+    text-decoration: none;
+    text-align: center;
+    color: #252525
 }
