--- a/src/components/looders.css
+++ b/src/components/looders.css
@@ -14,7 +14,7 @@
 .looder_img {
     width: 46%;
     height: 20vh;
-    background-color: black;
+    background-color: #252525;
     margin-bottom: 1rem;
     border-radius: 10px;
     color: #fff
@@ -22,11 +22,18 @@
 .looder_img img {
     width:100%;
     height: 16vh;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
 }
 
 .looder_img p {
     font-size: 0.7rem;
     height: 4vh;
     padding: 0 0.5rem;
+    color:#fff;
+    margin: 0
+}
+.looders-container .nothing {
+    width: 60%;
+    margin: auto;
 }
