--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -33,3 +33,21 @@
     flex-direction: column;
     margin: auto;
 }
+
+@media screen and (min-width: 600px) {
+    .welcome-text {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .welcome-text {
+        width: 30%;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .welcome-text {
+        width: 25%;
+    }
+}
