--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,3 +12,10 @@
 .footer h2 {
     font-size: 1.2rem;
 }
+
+@media screen and (min-width: 600px) {
+    .footer {
+        width: 50%;
+        left:25%;
+    }
+}
