--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -34,3 +34,21 @@
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
+@media screen and (min-width: 600px) {
+    .profile {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .profile {
+        width: 30%;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .profile {
+        width: 25%;
+    }
+}
